--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -1,7 +1,18 @@
 name: First Workflow
 on: workflow_dispatch
 jobs:
-  first-job:
+ first-job:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Print greeting
+        run: echo "Hello World!"
+      - name: Print goodbye
+        run: echo "Done -bye!"
+      - name: Run a multi-line script
+        run: |
+         echo Add other actions to build,
+         echo test, and deploy your project.
+ second-job:
     runs-on: ubuntu-latest
     steps:
       - name: Print greeting
