--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,27 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
+
+      - name: Get new branch
+        run: git fetch origin newbranch:main
+
+      - name: Fetch other branch
+        run: git fetch origin other-branch:other-branch
+
+      - name: List changed files
+        id: file_list
+        run: |
+         git diff --name-only main other-branch > file_changes.txt
+        continue-on-error: true
+
+      - name: Commit changes
+        run: |
+         cat file_changes.txt
+         git config --global user.email "naveenkarthik5764@gmail.com"
+         git config --global user.name "NaveenKarthikV"
+         cat file_changes.txt | xargs -I % git add %
+         git commit -m "Committing changed files from other-branch"
+         git push origin main
       
       - name: Log in to Docker Hub
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
