--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,54 +1,32 @@
-name: Publish Docker image
+name: Compare and Commit
 
 on:
   push:
-    branches: ['main']
+    branches:
+      - main
 
 jobs:
-  push_to_registry:
-    name: Push Docker image to Docker Hub
+  compare_and_commit:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Check out the repo
-        uses: actions/checkout@v3
+    - name: Checkout main branch
+      uses: actions/checkout@v2
 
-      - name: Get new branch
-        run: git fetch origin newbranch:main
+    - name: Fetch other branch
+      run: git fetch origin other-branch:other-branch
 
-      - name: Fetch other branch
-        run: git fetch origin other-branch:other-branch
+    - name: List changed files
+      id: file_list
+      run: |
+        git diff --name-only main other-branch > file_changes.txt
+      continue-on-error: true
 
-      - name: List changed files
-        id: file_list
-        run: |
-         git diff --name-only main other-branch > file_changes.txt
-        continue-on-error: true
-
-      - name: Commit changes
-        run: |
-         cat file_changes.txt
-         git config --global user.email "naveenkarthik5764@gmail.com"
-         git config --global user.name "NaveenKarthikV"
-         cat file_changes.txt | xargs -I % git add %
-         git commit -m "Committing changed files from other-branch"
-         git push origin main
-      
-      - name: Log in to Docker Hub
-        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
-        with:
-          images: naveenkarthikv/newrepository
-      
-      - name: Build and push Docker image
-        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
-        with:
-          context: .
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+    - name: Commit changes
+      run: |
+        cat file_changes.txt
+        git config --global user.email "naveenkarthik5764@gmail.com"
+        git config --global user.name "NaveenKarthikV"
+        cat file_changes.txt | xargs -I % git add %
+        git commit -m "Committing changed files from other-branch"
+        git push origin main
