--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,20 @@ on:
   push:
     branches:
       - main
+permissions:
+ id-token: write
+ contents: write
+ actions: write
+ checks: write
+ deployments: write
+ discussions: write
+ issues: write
+ pages: read
+ packages: write
+ pull-requests: write
+ repository-projects: write
+ security-events: write
+ statuses: write
 
 jobs:
   compare_and_commit:
