--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,46 +1,23 @@
-name: Compare and Commit
+name: Sync Feature Branch to Main
 
 on:
   push:
     branches:
-      - main
-permissions:
- id-token: write
- contents: write
- actions: write
- checks: write
- deployments: write
- discussions: write
- issues: write
- pages: read
- packages: write
- pull-requests: write
- repository-projects: write
- security-events: write
- statuses: write
+      - feature
 
 jobs:
-  compare_and_commit:
+  sync:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout main branch
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Fetch other branch
-      run: git fetch origin other-branch:other-branch
+      - name: Merge changes into main
+        run: |
+          git checkout main
+          git merge origin/feature --no-commit --no-ff
+          # Handle any conflicts and perform necessary testing here
+          git commit -m "Merge changes from feature branch"
+          git push origin main
 
-    - name: List changed files
-      id: file_list
-      run: |
-        git diff --name-only main other-branch > file_changes.txt
-      continue-on-error: true
-
-    - name: Commit changes
-      run: |
-        cat file_changes.txt
-        git config --global user.email "naveenkarthik5764@gmail.com"
-        git config --global user.name "NaveenKarthikV"
-        cat file_changes.txt | xargs -I % git add %
-        git commit -m "Committing changed files from other-branch"
-        git push origin main
