--- a/.github/workflows/Pullrequest.yml
+++ b/.github/workflows/Pullrequest.yml
@@ -31,4 +31,4 @@ jobs:
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v5
         with:
-          branch: other-branch
+          branch: other-branch promotion
