--- a/.github/workflows/Pullrequest.yml
+++ b/.github/workflows/Pullrequest.yml
@@ -23,12 +23,12 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          ref: other-branch
-      - name: Reset other-branch branch
+          ref: main
+      - name: Reset main branch
         run: |
           git fetch origin main:main
           git reset --hard main
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v5
         with:
-          branch: other-branch-promotion
+          branch: other-branch
