--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,7 @@
 name: Compare and Commit
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - main
@@ -20,27 +21,28 @@ permissions:
  statuses: write
 
 jobs:
-  compare_and_commit:
+  checkout:
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout main branch
       uses: actions/checkout@v2
 
-    - name: Fetch other branch
-      run: git fetch origin other-branch:other-branch
-
-    - name: List changed files
-      id: file_list
+    - name: git setup
       run: |
-        git diff --name-only main other-branch > file_changes.txt
-      continue-on-error: true
-
-    - name: Commit changes
-      run: |
-        cat file_changes.txt
         git config --global user.email "naveenkarthik5764@gmail.com"
         git config --global user.name "NaveenKarthikV"
-        cat file_changes.txt | xargs -I % git add %
-        git commit -m "Committing changed files from other-branch"
-        git push origin main
+        git clone https://github.com/NaveenKarthikV/gitactions-cicd.git
+        cd gitactions-cicd 
+
+  compare_branch:
+    needs: [checkout]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Create Pull Request
+        uses: NaveenKarthikV/create-pull-request@v5
+        with:
+         branch: other-branch
+           
+
+    
