--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,7 @@ jobs:
 
 
   merging:
-          needs: [checkout]
+          needs: [compare_branch]
           runs-on: ubuntu-latest
           steps:
             - id: automerge
