--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,18 +35,18 @@ jobs:
         git clone https://github.com/NaveenKarthikV/gitactions-cicd.git
         cd gitactions-cicd 
 
-  compare_branch:
-    needs: [checkout]
-    runs-on: ubuntu-latest
-    steps:
-      - name: Create Pull Request
-        uses: NaveenKarthikV/create-pull-request@v5
-        with:
-         branch: other-branch
+  # compare_branch:
+  #   needs: [checkout]
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Create Pull Request
+  #       uses: NaveenKarthikV/create-pull-request@v5
+  #       with:
+         # branch: other-branch
 
 
   merging:
-          needs: [compare_branch]
+          needs: [checkout]
           runs-on: ubuntu-latest
           steps:
             - id: automerge
