--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,11 @@ jobs:
         git config --global user.email "naveenkarthik5764@gmail.com"
         git config --global user.name "NaveenKarthikV"
         git clone https://github.com/NaveenKarthikV/gitactions-cicd.git
+        sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-key C99B11DEB97541F0
+        sudo apt-add-repository https://cli.github.com/packages
+        sudo apt update
+        sudo apt install gh
+        gh auth login
         cd gitactions-cicd 
 
   # compare_branch:
@@ -42,7 +47,7 @@ jobs:
   #     - name: Create Pull Request
   #       uses: NaveenKarthikV/create-pull-request@v5
   #       with:
-   # branch: other-branch
+  #        branch: other-branch
 
 
   merging:
@@ -51,8 +56,5 @@ jobs:
           steps:
             - id: automerge
               name: merge Pull Request
-              #uses: "NaveenKarthikV/automerge-action@v0.15.6" 
-              run : |
-               git branch
-               # git merge --no-ff other-branch
-               git merge main
+              run: |
+               gh pr create --base base-branch --head other-branch  --title "test" --body "test"
