--- a/.github/workflows/updatefiles.yml
+++ b/.github/workflows/updatefiles.yml
@@ -16,9 +16,9 @@ jobs:
     - name: Update files
       run: |
         # Replace with the actual commands you need to update files/folders
-        git config user.name "NaveenKarthikV"
-        git config user.email "naveenkarthik5764@gmail.com"
-        git checkout main
+        git config --global user.name "NaveenKarthikV"
+        git config --global user.name "naveenkarthik5764@gmail.com"
+        git checkout otherbranch
         git merge otherbranch --no-commit --no-ff
         # Perform any necessary file/folder changes
         git commit -m "Auto-update files from otherbranch"
