--- a/.github/workflows/updatefiles.yml
+++ b/.github/workflows/updatefiles.yml
@@ -18,7 +18,7 @@ jobs:
         # Replace with the actual commands you need to update files/folders
         git config user.name "NaveenKarthikV"
         git config  user.name "naveenkarthik5764@gmail.com"
-        git checkout otherbranch
+        git checkout main
         git merge otherbranch --no-commit --no-ff
         # Perform any necessary file/folder changes
         git commit -m "Auto-update files from otherbranch"
