--- a/.github/workflows/updatefiles.yml
+++ b/.github/workflows/updatefiles.yml
@@ -5,6 +5,7 @@ on:
   push:
     branches:
       - otherbranch
+
 jobs:
   auto-update:
     runs-on: ubuntu-latest
@@ -13,9 +14,16 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Update files
+    - name: Check for changes
+      id: check_changes
       run: |
-        # Replace with the actual commands you need to update files/folders
+        # Compare user-branch with origin/main to see if there are any new changes
+        CHANGES=$(git rev-list --count origin/main..otherbranch)
+        echo "::set-output name=changes::$CHANGES"
+
+    - name: Update files
+      if: steps.check_changes.outputs.changes > 0
+      run: |
         git config user.name "NaveenKarthikV"
         git config  user.name "naveenkarthik5764@gmail.com"
         git checkout main
@@ -23,3 +31,4 @@ jobs:
         # Perform any necessary file/folder changes
         git commit -m "Auto-update files from otherbranch"
         git push
+
