--- a/.github/workflows/updatefiles.yml
+++ b/.github/workflows/updatefiles.yml
@@ -18,7 +18,7 @@ jobs:
       id: check_changes
       run: |
         # Compare user-branch with origin/main to see if there are any new changes
-        CHANGES=$(git rev-list --count origin/main--otherbranch)
+        CHANGES=$(git rev-list --count origin/main --otherbranch)
         echo "::set-output name=changes::$CHANGES"
 
     - name: Update files
