--- a/.github/workflows/updatefiles.yml
+++ b/.github/workflows/updatefiles.yml
@@ -6,6 +6,7 @@ on:
     branches:
       - otherbranch
 
+
 jobs:
   auto-update:
     runs-on: ubuntu-latest
@@ -13,24 +14,25 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
-      
-    - name: Fetch latest change
-      run: git fetch origin main:otherbranch 
+
+    - name: Fetch latest changes
+      run: git fetch origin main:otherbranch
 
     - name: Check for changes
       id: check_changes
       run: |
-        # Compare user-branch with origin/main to see if there are any new changes
-        CHANGES=$(git rev-list --count otherbranch --origin/main)
+        CHANGES=$(git log --pretty=oneline --abbrev-commit otherbranch..origin/main)
         echo "::set-output name=changes::$CHANGES"
+
     - name: Update files
-      if: steps.check_changes.outputs.changes > 0
+      if: steps.check_changes.outputs.changes != ''
       run: |
-        git config user.name "NaveenKarthikV"
-        git config  user.name "naveenkarthik5764@gmail.com"
+        git config user.name NaveenkarthikV
+        git config user.email naveenkarthik5764@gmail.com
         git checkout main
         git merge otherbranch --no-commit --no-ff
         # Perform any necessary file/folder changes
         git commit -m "Auto-update files from otherbranch"
         git push
+
 
