--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -66,15 +66,25 @@ jobs:
           #cp plugins/* temp_dags/plugins/
           ls -R temp_dags/
         
-      - name: Set AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
+      - name: Log in to Docker Hub
+        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
-          aws_bucket: ${{ secrets.AWS_BUCKET }}
-          source_dir: temp_dags
-          destination_dir: github
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+        with:
+          images: naveenkarthikv/newrepository
+      - name: Build and push Docker image
+        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+
       - name: Deploy to S3
         run: |
           pip install boto3
