--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,18 +1,17 @@
-name: Get-All-Dags-Tested
-# on:  [push]   
+name: Pipeline
+
 on:  
   push:
      paths:
-      - 'dags/**'
-      - 'utils/**'
-      - 'sql/**'
+      - otherbranch
+      
   pull_request:
     branches:
       - main      
   workflow_dispatch:
 
 jobs:  
-  Get-All-Dags-Tested:    
+  CICD:    
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -33,6 +32,7 @@ jobs:
         run:  echo "::set-output name=fileswithdepth::$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} | xargs)"          
         #run:  echo "::set-output name=fileswithdepth::$(git diff --name-only origin/main origin/${GITHUB_HEAD_REF} | xargs)"          
         shell: bash
+        
       - name: 2get changed files
         id: getfile
         run: |
