--- a/.github/workflows/new.yml
+++ b/.github/workflows/new.yml
@@ -2,15 +2,15 @@ name: Move-Code-To-Deploy-DEV
 on:
   push: 
     branches:
-      - otherbranch
+      - main
     paths:
-      - 'dags/**'
-      - 'utils/**'
+      - 'folder1/**'
+      - 'folder2/**'
       - 'sql/**'
   # move code only when there is pull request into QA Branch.
   pull_request:
     branches:
-      - Sprint_122  
+      - otherbranch  
     paths:
     - 'dags/**'
     - 'utils/**'
@@ -27,18 +27,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3         
         with:
-          fetch-depth: 2   # 0 will get entire history  
+          fetch-depth: 2    
 
-      - name: Set up Python
-        uses: actions/setup-python@v3
-        with:
-          python-version: '3.7' 
-
-      - name: Install dependencies
-        run:  |
-          python -m pip install --upgrade pip
-
-      - name: 1Find Difference between branch and commit
+      - name: check the Difference
         id: Finddiff        
         run:  echo "::set-output name=fileswithdepth::$(git diff --name-status ${{ github.event.before }} ${{ github.sha }} | xargs)"          
         #run:  echo "::set-output name=fileswithdepth::$(git diff --name-only origin/main origin/${GITHUB_HEAD_REF} | xargs)"          
