--- a/.github/workflows/new.yml
+++ b/.github/workflows/new.yml
@@ -43,53 +43,27 @@ jobs:
 
       - name: Move the files to temp directory
         id: Movefiles    
-        run:  |        
-          echo "Files in previous versus current version: ${{ steps.Finddiff.outputs.fileswithdepth }} "    
-          echo "Files modified in current check in: ${{steps.files.outputs.added_modified}} "
-          mkdir -p temp_dags/{utils,plugins,sql}  
-          myarray="${{ steps.Finddiff.outputs.fileswithdepth }}"
-          changelist=(${myarray// / })
-          len=${#changelist[@]}
-          echo "${myarray} has ${len} elements"    
-          for ((i=0; i<${len}; i++)) ; do
-            case "${changelist[$i]}" in
-              A | M | C | T | "R100" )
-                if [ "${changelist[$i]}" = "R100" ]; then  
-                  change_file="${changelist[$i+2]}"
-                  file_path=$(dirname "${changelist[$i+2]}")
-                  file_name=$(basename "${changelist[$i+2]}")
-                else
-                  change_file="${changelist[$i+1]}"
-                  file_path=$(dirname "${changelist[$i+1]}")
-                  file_name=$(basename "${changelist[$i+1]}") 
-                fi
-                 IFS='/'
-                read -a root <<< "${file_path}"
-                # root="${file_path##*/}"
-                echo "${file_path} and ${file_name} with root as ${root[0]}"
-                case  "${root[0]}" in 
-                  "dags") 
-                    echo "  > DAG loop:${file_path}/${file_name}."   
-                    cp "${change_file}" temp_dags/ 
-                    ;;
-                  sql |  utils) 
-                    echo "  > OUT loop:${file_path}/${file_name}." 
-                    mkdir -p temp_dags/${file_path}  
-                    cp --parents "${change_file}" "temp_dags"   
-                    echo "file temp_dags/${file_path}  created"
-                    ;; 
-                esac
-                ;;
-              R | D)
-                echo "-- ${changelist[$i+1]} no action done. "
-                ;;
-              esac
+        run: |        
+          echo ${{ steps.Finddiff.outputs.fileswithdepth }}          
+          mkdir -p temp_dags/{utils,plugins,sql}
+          echo "Files with depth"
+          for changed_file in ${{ steps.Finddiff.outputs.fileswithdepth }}; do
+            file_path=$(dirname "${changed_file}")
+            file_name=$(basename "${changed_file}")
+            if [ "${file_path}" = "dags" ]; then
+                echo "in if loop:${file_path}."  
+                echo "in if loop:${file_name}."   
+              cp ${changed_file} temp_dags/  
+            else   
+              echo "OUT if loop:${file_path}."  
+              echo "OUT if loop:${file_name}."  
+              mkdir -p temp_dags/${file_path}  
+              cp ${changed_file} temp_dags/${file_path}  
+            fi
           done
-
           #cp utils/* temp_dags/utils/
           #cp plugins/* temp_dags/plugins/
           ls -R temp_dags/
-          cd temp_dags
 
 
 
