--- a/.github/workflows/new.yml
+++ b/.github/workflows/new.yml
@@ -17,8 +17,6 @@ on:
 
   workflow_dispatch:
 
- 
-
 jobs:  
    Compare_the_branches:    
     runs-on: ubuntu-latest
@@ -26,7 +24,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3         
         with:
-          fetch-depth: 2    
+          fetch-depth: 0    
 
       - name: check the Difference
         id: Finddiff        
@@ -45,8 +43,7 @@ jobs:
         id: Movefiles    
         run: |        
           echo ${{ steps.Finddiff.outputs.fileswithdepth }}          
-          mkdir -p temp_dags/{utils,plugins,sql}
-          echo "Files with depth"
+          mkdir -p temp_dags/{newsql,python,sql}
           for changed_file in ${{ steps.Finddiff.outputs.fileswithdepth }}; do
             file_path=$(dirname "${changed_file}")
             file_name=$(basename "${changed_file}")
@@ -61,16 +58,7 @@ jobs:
               cp ${changed_file} temp_dags/${file_path}  
             fi
           done
-          #cp utils/* temp_dags/utils/
-          #cp plugins/* temp_dags/plugins/
           ls -R temp_dags/
-
-
-
-
-
-
-
       - name: Log in to Docker Hub
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
         with:
